2002-04-30  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/eggedit.cc: Now sets teleport data1 correctly.
	* objs/egg.cc (Egg_object): When receiving update from EStudio,
	set quality.  Also figure frame in all cases.
	* actors.cc,actorio.cc: Set/read 'assigned_usecode_flag'.
	* actors.cc: Update NPC name from EStudio.

2002-04-27  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/vgafile.cc (Shape_frame): Highlight bottom of object when
	showing an outline.

	* server/server.cc: If !WIN32 and if $HOME/.exult exists, store
	the socket file there.
	* mapedit/studio.cc:  Look in $HOME/.exult for socket file.  Also,
	removed the "-d" option.

2002-04-25  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc : Added missing parenthesis
	* gamedat.cc : Namespace stuff

2002-04-25  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Create gamedat, savegames in $HOME/.exult if gamedat
	doesn't already exist.

2002-04-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Whoops!  Next_frame_max
	wasn't stopping at the right number.

	* actors.cc: Allow anything to go in 'back' spot.

	* gamedat.cc,gamewin.cc,game.cc:  get_game_identity() moved into
	Game_window class, handles compressed savegames, and is used to
	check IDENTITY before doing a restore.

2002-04-23  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: applied patch by Kevin Lacquement to fix some
	header detection problems in configure

2002-04-21  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.cc,actions.cc:  notify_object_gone() method tells
	schedule that one of its objects is no longer around.
	* schedule.cc (Sleep_schedule): Make sure NPC is still by bed when
	waking up.

2002-04-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.cc, exult.cc: fixed setting the PATCH directory

2002-04-16  Ryan Nunn  <triforce@merlin.net.au>
	* game.cc : Don't pass trailing slashes in calls to get_system_path